tests/parser/if-statement-else-block-error.lox
if x > 0 {} else _
